oracle/prod/fmd/fmd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fmd-ingress
spec:
  rules:
  - host: fmd.haijin666.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fmd
            port:
              number: 8080
